# musubi

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
crates/cli/: Cargo.toml
crates/cli/src/: decrypt.rs  encrypt.rs  io.rs  keygen.rs  main.rs  splash.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/examples/: bench_decrypt.rs
crates/core/src/: alphabet.rs  cipher.rs  error.rs  key.rs  lib.rs  relation.rs
crates/core/tests/: vectors.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: PROPOSAL-v0.2.md  SPEC.md  THEORY.md
web/: app.js  index.html  style.css
