[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/masaki-09/musubi"
homepage = "https://github.com/masaki-09/musubi"
authors = ["masaki-09"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
