[package]
name = "musubi-cli"
description = "Command-line interface for the musubi relational cipher."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"

[[bin]]
name = "musubi"
path = "src/main.rs"

[dependencies]
musubi-core = { path = "../core", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints]
workspace = true
