[package]
name = "musubi-core"
description = "Core implementation of the musubi relational cipher."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"

[lints]
workspace = true
