[package]
name = "musubi-wasm"
description = "WebAssembly bindings for the musubi relational cipher."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
musubi-core = { path = "../core", version = "0.1.0" }
wasm-bindgen = "0.2"
serde_json = "1"
rand = "0.8"

# Enable getrandom's `js` feature only when targeting the browser so
# rand's OsRng can pull entropy from `crypto.getRandomValues`.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true
